package modele.player;

public class HumanPlayer {
}
